syntax = "proto3";

package form;
option go_package="./pb";

//判断身份
message ClickReq {
  string Token = 1;
}
message ClickResp {
  string UserType = 1;
  string FormStatus = 2;
}

//提交报名表
message CreateReq {
  string UserId = 12;
  string FormId = 13;
  string Token = 1;
  string Avatar=2;
  string  Major=3;
  string  Grade=4;
  string  Gender=5;
  string Phone=6;
  string  Group=7;
  string  Reason=8;
  string  Knowledge=9;
  string  SelfIntro=10;
  string  ExtraQuestion=11;
}
message CreateResp {
    string FormID=1;
}

//查看报名表
message CheckReq {
  string Token=1;
  string    EntryFormID=2;
}
message CheckResp {
  string Avatar=1;
  string  Major=2;
  string  Grade=3;
  string  Gender=4;
  string Phone=5;
  string  Group=6;
  string  Reason=7;
  string  Knowledge=8;
  string  SelfIntro=9;
  string  ExtraQuestion=10;
}

message GetApplicantNumberReq{
    string Group = 1;
    int64 Year = 2;
    string Season = 3;
}

message GetApplicantNumberResp{
   int64  Number = 1;
}

service EntryFormClient {
  rpc JudgeUser(ClickReq)returns(ClickResp);
  rpc CreateForm(CreateReq)returns(CreateResp);
  rpc UpdateForm(CreateReq)returns(CreateResp);
  rpc CheckForm(CheckReq)returns(CheckResp);
  rpc GetApplicantNumber(GetApplicantNumberReq)returns(GetApplicantNumberResp);
}
